--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ form
 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(8, 1fr);
+    grid-template-rows: repeat(8, .5fr);
     border-radius: 5px;
   
 }
@@ -32,6 +32,7 @@ h1
    grid-column: 3/5;
    grid-row: 1;
    padding-left: 5%;
+  
 
 }
 
