--- a/style.css
+++ b/style.css
@@ -116,8 +116,8 @@ header
     margin-top: 5%;
     font-weight: bold;
     font-size: xx-large;
-    background-color: white;
     border: 1px solid white;
+    color: white;
 }
 
 footer
@@ -126,7 +126,7 @@ footer
     margin-top: 5%;
     font-weight: bold;
     font-size: xx-large;
-    background-color: white;
+    color: white;
     border: 1px solid white;
     margin-bottom: 5%;
 }
